unpackaged/main/default/objects/Account/fields/aaa_remove_this_from_prod__c.field-meta.xml
<CustomField>
    <fullName>aaa_remove_this_from_prod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>aaa remove this from prod</label>
    <type>Checkbox</type>
</CustomField>