unpackaged/main/default/objects/Account/fields/aaaaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaaaa__c</fullName>
    <defaultValue>true</defaultValue>
    <label>aaaaaaa</label>
    <type>Checkbox</type>
</CustomField>