unpackaged/main/default/objects/Account/fields/Apple__c.field-meta.xml
<CustomField>
    <fullName>Apple__c</fullName>
    <label>Apple</label>
    <length>100</length>
    <type>Text</type>
</CustomField>