unpackaged/main/default/objects/Account/fields/Apple_Cider_Lover__c.field-meta.xml
<CustomField>
    <fullName>Apple_Cider_Lover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apple Cider Lover</label>
    <type>Checkbox</type>
</CustomField>