unpackaged/main/default/objects/Account/fields/Banana__c.field-meta.xml
<CustomField>
    <fullName>Banana__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banana</label>
    <type>Checkbox</type>
</CustomField>