unpackaged/main/default/objects/Account/fields/deploy_to_target_test__c.field-meta.xml
<CustomField>
    <fullName>deploy_to_target_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deploy to target test</label>
    <type>Checkbox</type>
</CustomField>