unpackaged/main/default/objects/Account/fields/dtt_staging_test__c.field-meta.xml
<CustomField>
    <fullName>dtt_staging_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dtt-staging-test</label>
    <type>Checkbox</type>
</CustomField>