unpackaged/main/default/objects/Account/fields/Test_field_for_better_error__c.field-meta.xml
<CustomField>
    <fullName>Test_field_for_better_error__c</fullName>
    <label>Test field for better error</label>
    <type>AutoNumber</type>
</CustomField>