unpackaged/main/default/objects/Account/fields/X11_december_checkbox__c.field-meta.xml
<CustomField>
    <fullName>X11_december_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>11 december checkbox</label>
    <type>Checkbox</type>
</CustomField>